--- a/ChatSDKCore/Assets/ChatSDKLocalizable.strings
+++ b/ChatSDKCore/Assets/ChatSDKLocalizable.strings
@@ -93,6 +93,7 @@
 "bNoActiveParticipants" = "No Active Participants";
 "bDone" = "Done";
 "bEdit" = "Edit";
+"bClose" = "Close";
 "bNoMessages" = "No messages...";
 "bGroupName" = "Group Name";
 "bLastSeen_at_" = "Last seen %@ at %@";
